tests/paczka2/big_fuzzy/84630775.err
Error in line 8: tkAL3WgO65 A851 41,0
Error in line 12: v8Y5fkn S936 60,8
Error in line 6: tQPWTUH6gS S698 13,0
Error in line 47: tQPWTUH6gS A851 291,57
Error in line 50: v8Y5fkn A354 99,1
Error in line 57: v8Y5fkn A851 33,56
Error in line 56: tQPWTUH6gS A851 84,3
Error in line 35: dsVnh9R6bpC A851 328,0
Error in line 74: dsVnh9R6bpC S936 7,2
Error in line 76: v8Y5fkn A851 44,7
Error in line 78: 6hWvm S936 175,5
Error in line 81: 6hWvm A354 51,8
Error in line 83: dsVnh9R6bpC A354 3,5
Error in line 65: A354 S936 51,4
Error in line 93: dsVnh9R6bpC S698 52,7
Error in line 103: A354 A851 68,0
Error in line 97: dsVnh9R6bpC S936 2,9
Error in line 107: dsVnh9R6bpC A851 14,0
Error in line 113: tQPWTUH6gS A851 57,2
Error in line 111: dsVnh9R6bpC S698 0,7
Error in line 141: dsVnh9R6bpC A851 47,9
Error in line 145: tkAL3WgO65 S936 52,7
Error in line 161: v8Y5fkn A354 85,4
Error in line 156: tQPWTUH6gS A851 56,6
Error in line 163: tQPWTUH6gS A354 6,6
Error in line 169: A354 S698 16,6
Error in line 162: v8Y5fkn S698 9,4
Error in line 176: tQPWTUH6gS S698 12,7
Error in line 184: A354 A354 -1,6
Error in line 172: A354 A354 37,5
Error in line 193: 6hWvm A851 23,3
Error in line 197: 6hWvm A354 71,6
Error in line 188: dsVnh9R6bpC S698 55,6
Error in line 208: tkAL3WgO65 A354 35,6
Error in line 218: v8Y5fkn S936 77,7
Error in line 207: A354 A354 5,8
Error in line 229: dsVnh9R6bpC S936 88,6
Error in line 231: tkAL3WgO65 S698 34,4
Error in line 215: 6hWvm S698 26,6
Error in line 238: 6hWvm S936 89,5
Error in line 242: 6hWvm A851 72,3
Error in line 247: v8Y5fkn S698 68,4
